--- a/style.css
+++ b/style.css
@@ -81,3 +81,57 @@ a:nth-of-type(12) {
 
 
 /* Hieronder komen jouw animaties */
+.mouseover {
+  background-color:#DC0DA8 ;
+}
+
+.click {
+  background-color: #5ebb0c;
+}
+
+.pulser::after {
+  animation: pulse 1000ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.4);
+    opacity: 0.4;
+  }
+}
+
+.pulser {
+  position: relative;
+}
+
+.pulser::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: blueviolet;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.stretch {
+animation-name: stretch-animation;
+animation-duration: 1s;  
+}
+  
+@keyframes stretch-animation {
+  0%{
+    transform: scaleX(1);
+  }
+  50%{
+    transform: scaleX(1.5);
+  }
+  100%{
+    transform: scaleX(1);
+  }
+}
